--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
 
 # install other libraries using pip
 install:
+    - pip install -U setuptools
     - pip install -Ue .[dev]
     - wget https://github.com/google/protobuf/releases/download/v3.1.0/protoc-3.1.0-linux-x86_64.zip
     - unzip protoc-3.1.0-linux-x86_64.zip
