catch DecodeErros in addition to KeyErrors when parsing messages; add branch coverage reporting, improve coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,16 @@
 [tool:pytest]
-addopts = tests --strict --cov hedgehog.protocol --cov-report html --cov-report term
+addopts = --doctest-modules --strict --cov hedgehog.protocol --cov-branch --cov-report html --cov-report term
+norecursedirs = gsl_protocol_python
 console_output_style = classic
+
+[mypy]
+python_version = 3.7
+incremental = True
+ignore_missing_imports = True
+;disallow_untyped_defs = True
+check_untyped_defs = True
+warn_return_any = True
+warn_redundant_casts = True
 
 [aliases]
 test = pytest
