clean up setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,18 @@
 [tool:pytest]
-addopts = --doctest-modules --strict --cov hedgehog.protocol --cov-branch --cov-report html --cov-report term
-norecursedirs = gsl_protocol_python
+addopts =
+    --doctest-modules --strict
+    --cov hedgehog.protocol --cov-report html --cov-report term
+norecursedirs =
+    gsl_protocol_python
 console_output_style = classic
+
+[coverage:run]
+branch = True
+
+[coverage:report]
+exclude_lines =
+    pragma: nocover
+    raise NotImplemented
 
 [mypy]
 python_version = 3.7
