add IMU messages; custom code to add kind field in serialization

--- a/gsl_protocol_python/python.yaml
+++ b/gsl_protocol_python/python.yaml
@@ -36,6 +36,18 @@ io.DigitalMessage:
   subscription:
     typ: Subscription
 
+imu.ImuMessage:
+  kind:
+    typ: ImuKind
+  x:
+    typ: int
+  y:
+    typ: int
+  z:
+    typ: int
+  subscription:
+    typ: Subscription
+
 motor.MotorAction:
   port:
     typ: int
