--- a/gsl_protocol_python/python.yaml
+++ b/gsl_protocol_python/python.yaml
@@ -64,6 +64,10 @@ motor.MotorAction:
   absolute:
     typ: int
 
+motor.MotorConfigAction:
+  port:
+    typ: int
+
 motor.MotorCommandMessage:
   port:
     typ: int
