manually editing servo message classes to convert Optional[int] to (bool, int)

--- a/gsl_protocol_python/python.yaml
+++ b/gsl_protocol_python/python.yaml
@@ -97,19 +97,14 @@ motor.MotorSetPositionAction:
 servo.ServoAction:
   port:
     typ: int
-  active:
-    typ: bool
   position:
-    typ: int
-    default: None
+    typ: Optional[int]
 
 servo.ServoCommandMessage:
   port:
     typ: int
-  active:
-    typ: bool
   position:
-    typ: int
+    typ: Optional[int]
   subscription:
     typ: Subscription
 
