implement additional emergency stop messages

--- a/gsl_protocol_python/python.yaml
+++ b/gsl_protocol_python/python.yaml
@@ -16,7 +16,15 @@ version.VersionMessage:
   server_version:
     typ: str
 
-emergency.ReleaseAction:
+emergency.EmergencyAction:
+  activate:
+    typ: bool
+
+emergency.EmergencyMessage:
+  active:
+    typ: bool
+  subscription:
+    typ: Subscription
 
 io.IOAction:
   port:
