add first two vision messages

--- a/gsl_protocol_python/python.yaml
+++ b/gsl_protocol_python/python.yaml
@@ -163,3 +163,7 @@ process.ProcessExitUpdate:
 speaker.SpeakerAction:
   frequency:
     typ: Optional[int]
+
+vision.CameraAction:
+  open:
+    typ: bool
