conform to naming conventions

--- a/gsl_protocol_python/python.yaml
+++ b/gsl_protocol_python/python.yaml
@@ -164,8 +164,10 @@ speaker.SpeakerAction:
   frequency:
     typ: Optional[int]
 
-vision.CameraAction:
+vision.VisionCameraAction:
   open:
     typ: bool
   channels:
     typ: Channel
+
+vision.VisionRetrieveFrameAction:
