add frame message

--- a/gsl_protocol_python/python.yaml
+++ b/gsl_protocol_python/python.yaml
@@ -171,3 +171,9 @@ vision.VisionCameraAction:
     typ: Channel
 
 vision.VisionRetrieveFrameAction:
+
+vision.VisionFrameMessage:
+  highlight:
+    typ: int
+  frame:
+    typ: bytes
