--- a/gsl_protocol_python/python.yaml
+++ b/gsl_protocol_python/python.yaml
@@ -174,6 +174,6 @@ vision.VisionRetrieveFrameAction:
 
 vision.VisionFrameMessage:
   highlight:
-    typ: int
+    typ: Optional[int]
   frame:
     typ: bytes
