add vision feature detection

--- a/gsl_protocol_python/python.yaml
+++ b/gsl_protocol_python/python.yaml
@@ -179,3 +179,7 @@ vision.VisionFrameMessage:
     typ: Optional[str]
   frame:
     typ: bytes
+
+vision.VisionFeatureMessage:
+  channel:
+    typ: str
